patchable/tests/ui/derive_fail_patchable_name_value_parameter.stderr
error: unrecognized `patchable` parameter
 --> tests/ui/derive_fail_patchable_name_value_parameter.rs:5:5
  |
5 |     #[patchable = "skip"]
  |     ^^^^^^^^^^^^^^^^^^^^^
