patchable/tests/ui/derive_fail_patchable_name_value_parameter.rs
use patchable::Patchable;

#[derive(Patchable)]
struct InvalidPatchableNameValueParameter<T> {
    #[patchable = "skip"]
    value: T,
}

fn main() {}
